# mdcore

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: codeql-analysis.yml
include/mdcore/: json_utils.h  list.h  logger.h  matrix.h  terminal_menu.h  terminal_menu.hpp  utils.h
include/mdcore/c/: README.md  logger.h  utils.h
include/mdcore/handler/: config_handler.h  logger_handler.h
include/mdcore/manager/: config_manager.h  file_manager.h  memory_manager.h
include/mdcore/std/: logger.h  terminal_menu.h  utils.h
mdcore/: CMakeLists.txt  config_handler.cpp  config_manager.cpp  json_utils.cpp  list.cpp  logger.cpp  logger_handler.cpp  matrix.cpp
mdcore/c/: clogger.cpp  cutils.cpp  logger.cpp
mdcore/std/: logger.cpp  utils.cpp
test-suite/: CMakeLists.txt
test-suite/src/: main.cpp  test_functions.h  tests.cpp  tests_c.cpp
